--- a/projetos.html
+++ b/projetos.html
@@ -29,7 +29,7 @@
                     <img src="Fotos.png/ffffffffffff.png"></img>
                 </div>
                 <h1> Lucas Antonio Mourato de Souza  </h1>
-                <h2> Sem nehum projeto. </h2>
+                <h2> Sem nenhum projeto. </h2>
             
             </header>
             <footer>
